--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "lucide-react": "^0.434.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.56.2",
     "react-router-dom": "^6.26.1",
     "sip.js": "^0.21.2"
   },
